# rocket_app

./: .env  .rest  APIs.rest  Cargo.toml  Dockerfile  Makefile  Rocket.toml  docker-compose.yml
migrations/2022-04-28-120646_create_rustaceans/: up.sql
migrations/2022-05-01-121308_create_rustaceans/: up.sql
src/: auth.rs  lib.rs  models.rs  repositories.rs  schema.rs
